# eupaygrid

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  railway.json  render.yaml
.devcontainer/: devcontainer.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  metrics.py  websocket.py
backend/app/api/: deps.py  routes_admin.py  routes_balances.py  routes_demo.py  routes_institutions.py  routes_ledger.py  routes_network.py  routes_overview.py  routes_reserves.py  routes_transfers.py
backend/app/db/: schema.sql  session.py
backend/app/models/: schemas.py
backend/app/services/: errors.py  helpers.py  settlement.py
docs/: README.md  architecture.md  isp-tr.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/balances/: page.tsx
frontend/src/app/institutions/: page.tsx
frontend/src/app/ledger/: page.tsx
frontend/src/app/network/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/transfers/: page.tsx
frontend/src/components/: EmptyState.tsx  KpiCard.tsx  LoadingState.tsx  Navbar.tsx  PageHeader.tsx  ShellCard.tsx  StatusPill.tsx  ToastProvider.tsx
frontend/src/lib/: api.ts  format.ts  types.ts  ws.ts
infra/otel/: otel-collector.yml
proto/: README.md
scripts/: demo_seed.sh
