[project]
name = "eupaygrid-backend"
version = "0.1.0"
description = "EUPayGrid settlement backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn[standard]==0.35.0",
  "asyncpg==0.30.0",
  "prometheus-client==0.23.1",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "python-dotenv==1.1.1",
  "orjson==3.11.2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
